--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   english_words: ^3.1.0
+  redux: ^3.0.0
+  flutter_redux: ^0.5.3
 
   flutter_gallery_assets: ^0.1.7
   shrine_images: ^1.1.1
+  fish_redux: ^0.2.4
 
 dev_dependencies:
   flutter_test:
